--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,15 @@ body {
   float: right;
 }
 
+#btnTurnLeft {
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+}
+
 .horizon {
     opacity: 0.5;
     z-index: 3;
